--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ section {
 .btn-container {
     display: flex;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
 }
   
 .btn {
@@ -275,7 +275,8 @@ section {
     flex-direction: column;
 }
 
-.about-containers, .about-details-container{
+.about-containers,
+.about-details-container{
     display: flex;
 }
 
@@ -294,8 +295,8 @@ section {
     flex: 1;
     background: white;
     border-radius: 2rem;
-    border: rgb(255,192,203) 0.1 rem solid;
-    border-color: rgb(163,163,163) ;
+    border: rgb(53,53,53) 0.3rem solid;
+    border-color: rgb(255,192,203);
     text-align: center;
 }
 
@@ -304,8 +305,47 @@ section {
     height:80%;
 }
 
-.section .section__pic-container {
+.section__pic-container {
     height: 400px;
     width: 400px;
     margin: auto 0;
 }
+
+/* EXPERIENCE SECTION */
+
+#experience {
+    position: relative;
+  }
+  
+.experience-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+  }
+  
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 1.5rem;
+    justify-content: space-around;
+  }
+  
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+  }
+  
+article .icon {
+    cursor: default;
+  }
