--- a/style.css
+++ b/style.css
@@ -349,3 +349,30 @@ article {
 article .icon {
     cursor: default;
   }
+
+/* PROJECTS SECTION */
+
+#projects {
+    position: relative;
+  }
+  
+.color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+  }
+  
+.project-img {
+    border-radius: 2rem;
+    width: 50px;
+    height: 50px;
+  }
+  
+.project-title {
+    margin: 1rem;
+    color: black;
+  }
+  
+.project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);
+  }
